0.11->0.12
==========
1. Re-design of UI - removed "Install From" view.
2. Created a KIO/thumbnail font preview class
3. Fonts are installed/uninstalled on "Apply"
4. Settings are saved on "Apply"
5. Settings tab simplified - some uneccesary settings removed
6. Removal of Anti-Alias tab - relevant settings moved to kcmfonts

0.10->0.11
==========
1.  Port to KDE3/Qt3.
2.  Add support for CUPS's Fontmap.
3.  Create backups of system files.
4.  When install symbol encoding fonts, set encodig to "glyphs-fontspecific" in XftConfig.
5.  When install monospaced fonts, set spacing to mono in XftConfig.
6.  When first run (as root) - checks XFree86 config file to see if a font server is being used, if 
    so then fs/config is used as the config file, and "/etc/rc.d/init.d/xfs restart" is selected as
    as the X refresh command.
7.  Only install fonts that are useable.
8.  Add checkbox to enable overwriting of existing AFMs
9.  Remember open directories in advanced mode
10. Add support for .Z compressed Bitmap fonts
11. Read Type1 encodings from .afm files if listed as "array" in pfa/pfb

0.10b11->0.10
=============
1. Version added to KDE CVS.
2. Modified some keyboard shortcuts to remove conflicts.
3. Disable "Touch" and "Delete" folder if top-level X fonts dir is selected.

0.10b10->0.10b11 (Test version...)
================
1. Removed "root"/"Modify" and "Help" buttons - this gives more space to font lists, plus when using "root"/"Modify" root's
   config files are not being saved.
2. "IsFixedPitch" flag in AFMs produced incorrectly - was outputing "false" for monospaced fonts!
3. Added rounding to AFM metric scaling.
4. When creating AFMs, check that each characters' BBox is within the main BBox - this is a quick fix for wingdings.afm,
   which seems to be giving incorrect results.
5. StarOffice 6 / OpenOffice only need AFM files for Type1 fonts - plus no config files need to be altered. Therefore, added the ability to