@@ -1,294 +1,0 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
-<class>CSettingsWizardData</class>
-<comment>////////////////////////////////////////////////////////////////////////////////
-//
-// Class Name    : CSettingsWizardData
-// Author        : Craig Drummond
-// Project       : K Font Installer (kfontinst-kcontrol)
-// Creation Date : 22/04/2001
-// Version       : $Revision$ $Date$
-//
-////////////////////////////////////////////////////////////////////////////////
-//
-// This program is free software; you can redistribute it and/or
-// modify it under the terms of the GNU General Public License
-// as published by the Free Software Foundation; either version 2
-// of the License, or (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-//
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-//
-////////////////////////////////////////////////////////////////////////////////
-// (C) Craig Drummond, 2001
-////////////////////////////////////////////////////////////////////////////////</comment>
-<widget class="QWizard">
-    <property name="name">
-        <cstring>CSettingsWizardData</cstring>
-    </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>741</width>
-            <height>562</height>
-        </rect>
-    </property>
-    <property name="caption">
-        <string>Settings Wizard</string>
-    </property>
-    <widget class="QWidget">
-        <property name="name">
-            <cstring>itsIntroPage</cstring>
-        </property>
-        <attribute name="title">
-            <string>Welcome to the KDE Font Installer</string>
-        </attribute>
-        <grid>
-            <property name="name">
-                <cstring>unnamed</cstring>
-            </property>
-            <property name="margin">
-                <number>11</number>
-            </property>
-            <property name="spacing">
-                <number>6</number>
-            </property>
-            <widget class="QLabel" row="0" column="0" rowspan="1" colspan="3">
-                <property name="name">
-                    <cstring>itsMainText</cstring>
-                </property>
-                <property name="text">
-                    <string>As this is the first time you have used this module, there are some configuration settings that you will need to inform it of.</string>
-                </property>
-                <property name="alignment">
-                    <set>WordBreak|AlignTop|AlignLeft</set>
-                </property>
-                <property name="vAlign" stdset="0">
-                </property>
-                <property name="wordwrap" stdset="0">
-                </property>
-            </widget>
-            <spacer row="5" column="2">
-                <property name="name" stdset="0">
-                    <cstring>Spacer1</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Vertical</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Expanding</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>20</width>
-                        <height>20</height>
-                    </size>
-                </property>
-            </spacer>
-            <widget class="QLabel" row="4" column="0" rowspan="1" colspan="3">
-                <property name="name">
-                    <cstring>TextLabel1</cstring>
-                </property>
-                <property name="text">
-                    <string>Please press "Next&gt;" to proceed.</string>
-                </property>
-            </widget>
-            <spacer row="3" column="0">
-                <property name="name" stdset="0">
-                    <cstring>Spacer3</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Vertical</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Fixed</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>16</width>
-                        <height>16</height>
-                    </size>
-                </property>
-            </spacer>
-            <widget class="QLabel" row="2" column="0" rowspan="1" colspan="3">
-                <property name="name">
-                    <cstring>itsNonRootText</cstring>
-                </property>
-                <property name="text">
-                    <string>&lt;B&gt;NOTE&lt;/B&gt;
-&lt;p&gt;As you are not logged in as "root":
-&lt;ol&gt;
-&lt;li&gt;The settings set here will refer to your own personal settings - any fonts installed by you will (normally) only be available to you. To install fonts system-wide, login as "root".&lt;/li&gt;
-&lt;li&gt;Any fonts installed will only be printable by applications that embed the fonts within their output. Basically, for applications such as StarOffice (Versions &amp;lt;=5.2), please login as "root" to install your fonts.&lt;/li&gt;
-&lt;li&gt;If you are running a font server (xfs), then any fonts installed may not actually be usable - as normally only "root" may install fonts in this case.&lt;/li&gt;
-&lt;/ol&gt;
-To summarize: If you have problems using, or printing, the fonts you have installed - then you should try re-installing them as "root" (This can be accomplished via the "Administrator Mode" button.)
-&lt;/p&gt;</string>
-                </property>
-                <property name="alignment">
-                    <set>WordBreak|AlignVCenter|AlignLeft</set>
-                </property>
-                <property name="wordwrap" stdset="0">
-                </property>
-            </widget>
-            <spacer row="1" column="1">
-                <property name="name" stdset="0">
-                    <cstring>Spacer2</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Vertical</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Fixed</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>16</width>
-                        <height>16</height>
-                    </size>
-                </property>
-            </spacer>
-        </grid>
-    </widget>
-    <widget class="QWidget">
-        <property name="name">
-            <cstring>itsDirsAndFilesPage</cstring>
-        </property>
-        <attribute name="title">
-            <string>General Settings</string>
-        </attribute>
-        <grid>
-            <property name="name">
-                <cstring>unnamed</cstring>
-            </property>
-            <property name="margin">
-                <number>11</number>
-            </property>
-            <property name="spacing">
-                <number>6</number>
-            </property>
-            <widget class="QTextEdit" row="0" column="0">
-                <property name="name">
-                    <cstring>itsGenText</cstring>
-                </property>
-                <property name="sizePolicy">
-                    <sizepolicy>
-                        <hsizetype>0</hsizetype>
-                        <vsizetype>7</vsizetype>
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                    </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                    <size>
-                        <width>172</width>
-                        <height>0</height>
-                    </size>
-                </property>
-                <property name="text">
-                    <string>&lt;p&gt;The following values have been determined for your X11 and Ghostscript Fontmap folders and files. Please enter the correct location for any entries containing "&amp;lt;Not Found&amp;gt;"&lt;/p&gt;
-
-&lt;p&gt;If you wish to enable configuration of StarOffice, then select the "Configure" option, and enter the location of the main StarOffice folder.&lt;/p&gt;
-
-&lt;p&gt;NOTE: This is not needed for OpenOffice, and StarOffice version 6 onwards. The only thing that these two require is the existence of AFM files for Type1 fonts.&lt;/p&gt;</string>
-                </property>
-                <property name="readOnly">
-                    <bool>true</bool>
-                </property>
-            </widget>
-            <widget class="CSettingsWidget" row="0" column="1">
-                <property name="name">
-                    <cstring>itsSettingsWidget</cstring>
-                </property>
-            </widget>
-        </grid>
-    </widget>
-    <widget class="QWidget">
-        <property name="name">
-            <cstring>itsCompletePage</cstring>
-        </property>
-        <attribute name="title">
-            <string>Setup Complete</string>
-        </attribute>
-        <grid>
-            <property name="name">
-                <cstring>unnamed</cstring>
-            </property>
-            <property name="margin">
-                <number>11</number>
-            </property>
-            <property name="spacing">
-                <number>6</number>
-            </property>
-            <spacer row="3" column="0">
-                <property name="name" stdset="0">
-                    <cstring>Spacer1_2</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Vertical</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Expanding</enum>
-                </property>
-                <property name="sizeHint">
-                    <size>
-                        <width>20</width>
-                        <height>20</height>
-                    </size>
-                </property>
-            </spacer>
-            <widget class="QLabel" row="0" column="0">
-                <property name="name">
-                    <cstring>TextLabel1_3</cstring>
-                </property>
-                <property name="text">
-                    <string>&lt;p&gt;All the required setup information has now been determined.&lt;/p&gt;
-&lt;p&gt;This module has two main modes of operation:
-&lt;ol&gt;
-&lt;li&gt;&lt;i&gt;Basic:&lt;/i&gt; The underlying folder structure is hidden - and you will only be able to install/uninstall TrueType and Type1 fonts.&lt;/li&gt;
-&lt;li&gt;&lt;i&gt;Advanced:&lt;/i&gt; This is for more experienced users, and displays the X fonts folder structure - allowing you to add/delete whole folders to/from the X font path. Using this mode you can also install/uninstall Speedo and Bitmap (pcf, bdf, and snf) fonts.&lt;/li&gt;
-&lt;/ol&gt;
-To switch between these modes use the "Advanced Mode" checkbox on the main tab.&lt;/p&gt;</string>
-                </property>
-                <property name="alignment">
-                    <set>WordBreak|AlignVCenter|AlignLeft</set>
-                </property>
-                <property name="wordwrap" stdset="0">
-                </property>
-            </widget>
-            <widget class="QLabel" row="2" column="0">
-                <property name="name">
-                    <cstring>TextLabel2</cstring>
-                </property>
-                <property name="text">
-                    <string>&lt;p&gt;For further detailed help on how to use this module, please refer to the on-line help documentation.&lt;/p&gt;</string>
-                </property>
-            </widget>
-        </grid>
-    </widget>
-</widget>
-<customwidgets>
-    <customwidget>
-        <class>CSettingsWidget</class>
-        <header location="local">SettingsWidget.h</header>
-        <sizehint>
-            <width>-1</width>
-            <height>-1</height>
-        </sizehint>
-        <container>0</container>
-        <sizepolicy>
-            <hordata>5</hordata>
-            <verdata>5</verdata>
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-        </sizepolicy>
-    </customwidget>
-</customwidgets>
-<layoutdefaults spacing="6" margin="11"/>
-</UI>
