@@ -6,13 +6,15 @@
 4. Settings are saved on "Apply"
 5. Settings tab simplified - some uneccesary settings removed
 6. Removal of Anti-Alias tab - relevant settings moved to kcmfonts
+7. Add kfile-plugin to display Meta data for fonts
+8. Remove settings wizard
 
 0.10->0.11
 ==========
 1.  Port to KDE3/Qt3.
 2.  Add support for CUPS's Fontmap.
 3.  Create backups of system files.
-4.  When install symbol encoding fonts, set encodig to "glyphs-fontspecific" in XftConfig.
+4.  When install symbol encoding fonts, set encoding to "glyphs-fontspecific" in XftConfig.
 5.  When install monospaced fonts, set spacing to mono in XftConfig.
 6.  When first run (as root) - checks XFree86 config file to see if a font server is being used, if 
     so then fs/config is used as the config file, and "/etc/rc.d/init.d/xfs restart" is selected as
